<resources>
    <string name="app_name">Dicoding Tales</string>
    <string name="action_language">Language</string>
    <string name="action_logout">Logout</string>
    <string name="home_fragment_label">Home Fragment</string>
    <string name="detail_fragment_label">Detail Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="splash">Welcome to, </string>
    <string name="description_splash">Capture your beautiful memories and share it with the world!</string>

    <string name="email">Email</string>
    <string name="hint_email">Enter your email</string>
    <string name="password">Password</string>
    <string name="hint_password">Enter your password</string>
    <string name="btn_login">Login</string>

    <string name="name">Name</string>
    <string name="name_hint">Enter your name</string>
    <string name="btn_register">Register</string>

    <string name="password_validation">Password must be more than 8 characters</string>
    <string name="email_validation">Invalid email format</string>
    <string name="empty_name">Name cannot be empty</string>
    <string name="empty_email">Email cannot be empty</string>
    <string name="empty_password">Password cannot be empty</string>

    <string name="confirm_logout">Confirm Logout</string>
    <string name="confirm_logout_detail">Are you sure you want to logout?</string>
    <string name="yes">Yes</string>
    <string name="ok">OK</string>
    <string name="no">No</string>

    <string name="welcome">Welcome, %1$s</string>
    <string name="login_success">Login success, enjoy your time here.</string>

    <string name="welcome_register">Hi, %1$s</string>
    <string name="register_success">Your account succesfully registered, please login!</string>

    <string name="image_story">Image Story</string>
    <string name="title_story">Title Title Title</string>
    <string name="desc_story">Caption Caption Caption Caption</string>
    <string name="date_story">24 Nov 2024</string>
    <string name="name_story">Khoirul Anam</string>

    <string name="add_story">Post Story</string>
    <string name="upload_title">Upload Story</string>
    <string name="upload_title_big">Post Your Moment</string>
    <string name="upload">Upload</string>
    <string name="description">Description</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="no_media_selected">No media selected</string>
    <string name="please_add_description">Please add description</string>
    <string name="please_upload_an_image">Please upload an image</string>

    <string name="appwidget_text">STORY BANNER</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">Stack Widget For World's Stories</string>

    <string name="lorem_ipsum" translatable="false">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>


</resources>