<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.login.LoginFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="8dp">

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="16dp"
            android:alpha="0"
            android:text="@string/email"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:alpha="100" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:alpha="0"
                app:boxStrokeColor="@color/black"
                app:hintTextColor="@color/black"
                app:startIconDrawable="@drawable/email"
                tools:alpha="100">

                <com.khrlanamm.dicodingtales.ui.auth.helper.EmailEditText
                    android:id="@+id/ed_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    android:alpha="0"
                    android:backgroundTint="@color/black"
                    android:cursorVisible="true"
                    android:hint="@string/hint_email"
                    android:inputType="textEmailAddress"
                    android:padding="16dp"
                    android:textColorHint="@color/gray"
                    android:textCursorDrawable="@null"
                    tools:alpha="100" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:visibility="gone" />
        </FrameLayout>

        <TextView
            android:id="@+id/passwordTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="14dp"
            android:alpha="0"
            android:text="@string/password"
            android:textColor="@color/black"
            android:textSize="14sp"
            tools:alpha="100" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/PasswordEditTextLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="8dp"
            android:alpha="0"
            app:boxStrokeColor="@color/black"
            app:hintTextColor="@color/black"
            app:startIconDrawable="@drawable/password"
            tools:alpha="100">

            <com.khrlanamm.dicodingtales.ui.auth.helper.PasswordEditText
                android:id="@+id/ed_login_password"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:alpha="0"
                android:backgroundTint="@color/black"
                android:cursorVisible="true"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:padding="16dp"
                android:textColorHint="@color/black"
                android:textCursorDrawable="@null"
                tools:alpha="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            android:alpha="0"
            android:backgroundTint="?attr/colorPrimary"
            android:text="@string/btn_login"
            android:textColor="@color/white"
            tools:alpha="100" />

    </LinearLayout>
</ScrollView>
